k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: inovola
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
        - image: moustafayoussef/restaurant_webapp:1.1
          imagePullPolicy: Always
          name: webapp
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
              httpGet:
                      path: /healthz
                      port: 5000     
          livenessProbe:
              initialDelaySeconds: 10    
              httpGet:
                      path: /health_db
                      port: 5000
          resources:
            requests:
               cpu: "250m"
               memory: "100Mi"      
            limits:
               cpu: "500m"
               memory: "300Mi"     

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
