k8s/rest-ingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    generation: 1
    name: restaurant-app
    namespace: inovola
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: webapp
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
